--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ving.gasmileage"
-    android:versionCode="3"
-    android:versionName="2.0" >
+    android:versionCode="4"
+    android:versionName="2.0.0.1" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -18,16 +18,13 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.ving.gasmileage.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="keyboardHidden|orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.ving.gasmileage.DisplayData"
-            android:label="DisplayData" >
         </activity>
     </application>
 
